add_library(hw_i2c hw_i2c.cpp)
target_link_libraries(hw_i2c pico_stdlib hardware_i2c pico_i2c_slave debug_probe)

add_executable(test_i2c_xchange test_i2c_xchange.cpp)
target_link_libraries(test_i2c_xchange hw_i2c debug_probe)
pico_add_extra_outputs(test_i2c_xchange)

add_executable(test_i2c_bus_scan test_i2c_bus_scan.cpp)
target_link_libraries(test_i2c_bus_scan hw_i2c debug_probe)
pico_add_extra_outputs(test_i2c_bus_scan)

